erDiagram
    users ||--o{ verification_reviews : submits
    users ||--o{ stored_files : uploads
    users ||--o{ pickup_requests : publishes
    users ||--o{ pickup_requests : accepts
    users ||--o{ evaluations : writes
    users ||--o{ evaluations : receives
    users ||--o{ notifications : receives
    users ||--o{ point_transactions : owns

    stored_files ||--o{ users : avatar_file
    stored_files ||--o{ verification_reviews : material_file
    stored_files ||--o{ pickup_requests : pickup_credential
    stored_files ||--o{ pickup_requests : completion_proof

    pickup_requests ||--o{ point_transactions : related_pickup

    users {
        BIGINT id PK
        VARCHAR username UK
        VARCHAR password_hash
        BIGINT avatar_file_id FK
        VARCHAR phone
        VARCHAR student_id UK
        VARCHAR real_name
        VARCHAR auth_status
        VARCHAR role
        BIGINT point_balance
        DATE last_check_in_date
        DATETIME created_at
        DATETIME updated_at
    }

    verification_reviews {
        BIGINT id PK
        BIGINT user_id FK
        BIGINT material_file_id FK
        VARCHAR submitted_student_id
        VARCHAR submitted_real_name
        VARCHAR status
        BIGINT reviewer_id FK
        VARCHAR reject_reason
        DATETIME submitted_at
        DATETIME reviewed_at
    }

    stored_files {
        BIGINT id PK
        BIGINT uploader_id FK
        VARCHAR file_usage
        VARCHAR storage_path
        VARCHAR mime_type
        BIGINT file_size
        VARCHAR business_type
        BIGINT business_id
        DATETIME created_at
    }

    pickup_requests {
        BIGINT id PK
        BIGINT publisher_id FK
        BIGINT acceptor_id FK
        VARCHAR reward_type
        DECIMAL reward_amount
        BIGINT pickup_credential_file_id FK
        BIGINT completion_proof_file_id FK
        VARCHAR status
        VARCHAR cancel_reason
        DATETIME accept_deadline
        DATETIME accepted_at
        DATETIME completed_at
        DATETIME cancelled_at
    }

    point_transactions {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR type
        BIGINT amount
        BIGINT balance_after
        BIGINT related_pickup_id
        DATETIME created_at
    }

    evaluations {
        BIGINT id PK
        VARCHAR business_type
        BIGINT business_id
        BIGINT reviewer_id FK
        BIGINT reviewee_id FK
        VARCHAR reviewee_role
        VARCHAR rating_level
        DATETIME created_at
    }

    notifications {
        BIGINT id PK
        BIGINT receiver_id FK
        VARCHAR type
        VARCHAR business_type
        BIGINT business_id
        TINYINT is_read
        DATETIME created_at
        DATETIME read_at
    }
